--- a/style.css
+++ b/style.css
@@ -64,3 +64,18 @@ li{
     font-size: 20px     ;
     text-align: center;
 }
+
+.main{
+    padding: 20px 50px;
+    margin-bottom: 50px;
+
+}
+
+.other{
+    padding: 20px 50px;
+    margin-bottom: 50px;
+    width: 300px;
+    height: 300px;
+    text-align: center;
+
+}
